--- a/templates/include/footer.html.twig
+++ b/templates/include/footer.html.twig
@@ -3,8 +3,8 @@
 				<div class="container">
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-3">
-							<h3 class="section-title">About Homestate</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.</p>
+							<h3 class="section-title">{% trans %}About{% endtrans %} LocationImmo</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro tempore magnam exercitationem adipisci unde sapiente provident aliquid cum nam ipsam sed ullam maiores dicta, esse aut atque. Enim nemo officia qui vitae explicabo cumque voluptates at, animi fugiat quidem. Facere!</p>
 						</div>
 						
 						<div class="col-md-3 col-md-push-1">
@@ -52,7 +52,7 @@
 								<a href="#"><i class="icon-dribbble2"></i></a>
 								<a href="#"><i class="icon-youtube"></i></a>
 							</p>
-							<p>Copyright 2016 Free Html5 <a href="#">Module</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a> &amp; <a href="http://blog.gessato.com/" target="_blank">Gessato</a></p>
+							<p>&copy;Copyright 2021 LocationImmo</p>
 						</div>
 					</div>
 				</div>
