--- a/templates/main/home/index.html.twig
+++ b/templates/main/home/index.html.twig
@@ -3,219 +3,91 @@
 {% block title %}{% trans %}Home{% endtrans %} - LocationImmo{% endblock %}
 
 {% block body %}
-	<div id="fh5co-search-map">
-		<div class="search-property">
-			<div class="s-holder">
-				<h2>Search Properties</h2>
-				<div class="row">
-					<div class="col-xxs-12 col-xs-12">
-						<div class="input-field">
-							<label for="from">Keyword:</label>
-							<input type="text" class="form-control" id="from-place" placeholder="Any"/>
+<aside id="fh5co-hero" class="js-fullheight">
+	<div class="flexslider js-fullheight">
+		<ul class="slides">
+			<li style="background-image: url({{asset('assets/images/properties/home_01.jpg')}});">
+				<div class="overlay"></div>
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
+						<div class="slider-text-inner">
+							<h2 class="heading-title">Location Immo</h2>
+							<a href="{{ path('announce_home') }}" class="btn btn-primary btn-homepage icon fa-search">&nbsp;{% trans %}Learn More{% endtrans %}</a>
+							<a href="#fh5co-popular-properties" class="btn btn-primary btn-homepage icon fa-arrow-right">&nbsp;{% trans %}Newest Properties{% endtrans %}</a>
 						</div>
 					</div>
-					<div class="col-xxs-12 col-xs-12">
-						<section>
-							<label for="class">Property Status:</label>
-							<select class="cs-select cs-skin-border">
-								<option value="" disabled selected>Any</option>
-								<option value="1">Rent</option>
-								<option value="2">Sale</option>
-							</select>
-						</section>
-					</div>
-					<div class="col-xxs-12 col-xs-12">
-						<section>
-							<label for="class">Property Type:</label>
-							<select class="cs-select cs-skin-border input-half">
-								<option value="" disabled selected>Any</option>
-								<option value="1">Building</option>
-								<option value="2">Office</option>
-							</select>
-						</section>
-					</div>
-					<div class="col-xxs-12 col-xs-12">
-						<div class="input-field">
-							<label for="from">Location:</label>
-							<input type="text" class="form-control" id="from-place" placeholder="Any"/>
-						</div>
-					</div>
-					<div class="col-xxs-12 col-xs-12">
-						<section>
-							<label for="class">Price:</label>
-							<div class="wide">
-								<select class="cs-select cs-select-half cs-skin-border input-half">
-									<option value="" disabled selected>Any</option>
-									<option value="1">Building</option>
-									<option value="2">Office</option>
-								</select>
-								<select class="cs-select cs-select-half cs-skin-border input-half">
-									<option value="" disabled selected>Any</option>
-									<option value="1">Building</option>
-									<option value="2">Office</option>
-								</select>
-							</div>
-						</section>
-					</div>
-					<div class="col-xxs-12 col-xs-12">
-						<section>
-							<label for="class">Bedrooms:</label>
-							<div class="wide">
-								<select class="cs-select cs-select-half cs-skin-border input-half">
-									<option value="" disabled selected>Any</option>
-									<option value="1">Building</option>
-									<option value="2">Office</option>
-								</select>
-								<select class="cs-select cs-select-half cs-skin-border input-half">
-									<option value="" disabled selected>Any</option>
-									<option value="1">Building</option>
-									<option value="2">Office</option>
-								</select>
-							</div>
-						</section>
-					</div>
-					<div class="col-xxs-12 col-xs-12">
-						<section>
-							<label for="class">Bathrooms:</label>
-							<div class="wide">
-								<select class="cs-select cs-select-half cs-skin-border input-half">
-									<option value="" disabled selected>Any</option>
-									<option value="1">Building</option>
-									<option value="2">Office</option>
-								</select>
-								<select class="cs-select cs-select-half cs-skin-border input-half">
-									<option value="" disabled selected>Any</option>
-									<option value="1">Building</option>
-									<option value="2">Office</option>
-								</select>
-							</div>
-						</section>
-					</div>
-					<div class="col-xxs-12 col-xs-12">
-						<section>
-							<label for="class">Area:</label>
-							<div class="wide">
-								<select class="cs-select cs-select-half cs-skin-border input-half">
-									<option value="" disabled selected>Any</option>
-									<option value="1">Building</option>
-									<option value="2">Office</option>
-								</select>
-								<select class="cs-select cs-select-half cs-skin-border input-half">
-									<option value="" disabled selected>Any</option>
-									<option value="1">Building</option>
-									<option value="2">Office</option>
-								</select>
-							</div>
-						</section>
-					</div>
-					<div class="col-xxs-12 col-xs-12">
-						<section>
-							<label for="class">Parking spots:</label>
-							<div class="wide">
-								<select class="cs-select cs-select-half cs-skin-border input-half">
-									<option value="" disabled selected>Any</option>
-									<option value="1">Building</option>
-									<option value="2">Office</option>
-								</select>
-								<select class="cs-select cs-select-half cs-skin-border input-half">
-									<option value="" disabled selected>Any</option>
-									<option value="1">Building</option>
-									<option value="2">Office</option>
-								</select>
-							</div>
-						</section>
-					</div>
-					<div class="col-xxs-12 col-xs-12 text-center">
-						<p>
-							<a class="btn btn-primary btn-lg" href="#">Learn More</a>
-						</p>
 					</div>
 				</div>
+			</li>
+			</ul>
+		</div>
+</aside>
+<div id="fh5co-popular-properties" class="fh5co-section-gray">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
+				<h3>{% trans %}Newest Properties{% endtrans %}</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores, perspiciatis accusamus asperiores sint consequuntur debitis.</p>
 			</div>
 		</div>
-		<div class="map" style="background-image: url({{asset('assets/images/properties/home_01.jpg')}});"></div>
+		<div class="row">
+			{% for announce in announces %}
+				<div class="col-md-4 animate-box">
+					<a href="#" class="fh5co-property" style="{% if announce.images|length > 0 %}background-image:url({{asset('images/announces/'~announce.images[0].image)}}){% else %}background-image:url({{asset('assets/images/properties/home_07.jpg')}}){% endif %}">
+						<span class="status">{{ announce.type|trans }}</span>
+						<div class="prop-details">
+							<span class="price">{{ announce.price|trans }} € / {% trans %}Month{% endtrans %}</span>
+							<h3>{{ announce.title }}, {{ announce.city }}</h3>
+						</div>
+					</a>
+				</div>
+			{% endfor %}
+		</div>
 	</div>
+</div>
 
-		<div id="fh5co-popular-properties" class="fh5co-section-gray">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-						<h3>Popular Properties</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores, perspiciatis accusamus asperiores sint consequuntur debitis.</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4 animate-box">
-						<a href="#" class="fh5co-property" style="background-image: url(images/property-1.jpg);">
-							<span class="status">Sale</span>
-							<div class="prop-details">
-								<span class="price">$3,000</span>
-								<h3>Properties Near in Beach, USA California</h3>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-4 animate-box">
-						<a href="#" class="fh5co-property" style="background-image: url(images/property-2.jpg);">
-							<span class="status">Rent</span>
-							<div class="prop-details">
-								<span class="price">$200/mos</span>
-								<h3>Modern House at NZ</h3>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-4 animate-box">
-						<a href="#" class="fh5co-property" style="background-image: url(images/property-3.jpg);">
-							<span class="status">Sale</span>
-							<div class="prop-details">
-								<span class="price">$3,000</span>
-								<h3>Bonggalo House</h3>
-							</div>
-						</a>
-					</div>
-				</div>
+<div id="fh5co-testimonial" style="background:url({{asset('assets/images/main-bg-testimonial.jpg')}}) center/cover">
+	<div class="overlay"></div>
+	<div class="container">
+		<div class="row animate-box">
+			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<h2>{% trans %}Testimonials{% endtrans %}</h2>
 			</div>
 		</div>
-
-		<div id="fh5co-testimonial" style="background-image:url(images/img_bg_2.jpg);">
-			<div class="container">
-				<div class="row animate-box">
-					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<h2>Happy Clients</h2>
-					</div>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="box-testimony animate-box">
+					<blockquote>
+						<span class="quote"><span><i class="icon-quotes-right"></i></span></span>
+						<p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro tempore magnam exercitationem adipisci unde sapiente provident aliquid cum nam ipsam sed ullam maiores dicta, esse aut atque. Enim nemo officia qui vitae explicabo cumque voluptates at, animi fugiat quidem. Facere!&rdquo;</p>
+					</blockquote>
+					<p class="author">John Doe</p>
 				</div>
-				<div class="row">
-					<div class="col-md-4">
-						<div class="box-testimony animate-box">
-							<blockquote>
-								<span class="quote"><span><i class="icon-quotes-right"></i></span></span>
-								<p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
-							</blockquote>
-							<p class="author">John Doe, CEO <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> <span class="subtext">Creative Director</span></p>
-						</div>
-						
-					</div>
-					<div class="col-md-4">
-						<div class="box-testimony animate-box">
-							<blockquote>
-								<span class="quote"><span><i class="icon-quotes-right"></i></span></span>
-								<p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.&rdquo;</p>
-							</blockquote>
-							<p class="author">John Doe, CEO <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> <span class="subtext">Creative Director</span></p>
-						</div>
-						
-						
-					</div>
-					<div class="col-md-4">
-						<div class="box-testimony animate-box">
-							<blockquote>
-								<span class="quote"><span><i class="icon-quotes-right"></i></span></span>
-								<p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
-							</blockquote>
-							<p class="author">John Doe, Founder <a href="#">FREEHTML5.co</a> <span class="subtext">Creative Director</span></p>
-						</div>
-						
-					</div>
+				
+			</div>
+			<div class="col-md-4">
+				<div class="box-testimony animate-box">
+					<blockquote>
+						<span class="quote"><span><i class="icon-quotes-right"></i></span></span>
+						<p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolor voluptas repudiandae sequi nobis ex nam, dicta iste. Obcaecati, a?&rdquo;</p>
+					</blockquote>
+					<p class="author">Jane Doe</p>
 				</div>
+				
+				
+			</div>
+			<div class="col-md-4">
+				<div class="box-testimony animate-box">
+					<blockquote>
+						<span class="quote"><span><i class="icon-quotes-right"></i></span></span>
+						<p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptates incidunt labore sit. Voluptates consectetur ullam, repudiandae quisquam maiores itaque eius sunt similique est aperiam, labore mollitia. Optio unde nihil eius. Tempore similique ullam sit veritatis, ut mollitia illo cum.&rdquo;</p>
+					</blockquote>
+					<p class="author">John Doe</p>
+				</div>
+				
 			</div>
 		</div>
+	</div>
+</div>
 {% endblock %}
