--- a/templates/message/owner.html.twig
+++ b/templates/message/owner.html.twig
@@ -13,18 +13,21 @@
           <input type="text" value="{{ recipient }}" disabled class="form-control">
           {{ form_widget(messageForm.recipient) }}
         </div>
+        {# <div class="form-group">
+        </div> #}
         <div class="form-group" style="{{ not is_granted('ROLE_ADMIN') or not is_granted('ROLE_AGENT') ? 'display:none' : '' }}">
           {{ form_label(messageForm.adminrecipient, 'Admin Recipient'|trans) }} :
           {{ form_widget(messageForm.adminrecipient) }}
         </div>
         <div class="form-group">
-          {{ form_row(messageForm.subject, {label:'Subject'|trans}) }}
+          {{ form_label(messageForm.subject, 'Subject'|trans) }}
+          {{ form_widget(messageForm.subject, {value: subject|trans}) }}
         </div>
         <div class="form-group">
           {{ form_row(messageForm.body, {label: 'Message'}) }}
         </div>
         <div class="button-between">
-          <a href="{{ path('announce_ownerview') }}" class="btn-lg btn-default icon fa-backward">&nbsp;{% trans %}Back to list{% endtrans %}</a>
+          <a href="{{ path('announce_tenantview') }}" class="btn-lg btn-default icon fa-backward">&nbsp;{% trans %}Back to list{% endtrans %}</a>
           <button type="submit" class="btn btn-primary icon fa-paper-plane-o">&nbsp;{% trans %}Send message{% endtrans %}</button>
         </div>
       {{ form_end(messageForm) }}
