ajout icon et description meta

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="" />
+    <meta name="description" content="Site web réalisé dans le cadre d'une évaluation pour l'école Studi. Agence immobilière de location. Symfony 5.2" />
     <meta name="keywords" content="" />
     <meta property="og:title" content=""/>
     <meta property="og:image" content=""/>
@@ -16,7 +16,7 @@
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="" />
     <title>{% block title %}Welcome!{% endblock %}</title>
-    <link rel="shortcut icon" href="favicon.ico"/>
+    <link rel="shortcut icon" href="{{ asset('assets/images/icon-home.png') }}"/>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,300' rel='stylesheet' type='text/css'/>
     {% block stylesheets %}
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" integrity="sha512-nMNlpuaDPrqlEls3IX/Q56H36qvBASwb3ipuo3MxeWbsQB1881ox0cRv7UPTgBlriqoynt35KjEwgGUeUXIPnw==" crossorigin="anonymous" />
